--- a/TrainingManager/DAL/DAL.csproj
+++ b/TrainingManager/DAL/DAL.csproj
@@ -41,7 +41,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mappers\EntitiesMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ModuleRepository.cs" />
+    <Compile Include="Repositories\StudentModuleRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
+    <Compile Include="Repositories\WorkshopRepository.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAL.Interfaces\DAL.Interface.csproj">
+      <Project>{c6327956-274a-49d7-88ca-37d4e692de02}</Project>
+      <Name>DAL.Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ORM\ORM.csproj">
+      <Project>{ef37e142-72df-448b-b656-d9d69b170a02}</Project>
+      <Name>ORM</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
