Add WorkshopsController with no methods implementation. Add Workshop enitity to BLL.Interfaces. Add relation between Group and Workshop entities at ORM.Entities and AppDbContext.

--- a/TrainingManager/BLL.Interfaces/BLL.Interface.csproj
+++ b/TrainingManager/BLL.Interfaces/BLL.Interface.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Entities\StudentModule.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Entities\Request.cs" />
+    <Compile Include="Entities\Workshop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
