--- a/TrainingManager/WebUI/WebUI.csproj
+++ b/TrainingManager/WebUI/WebUI.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\GrowController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\WorkshopsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
