Add implementation for DAL.Repositories

--- a/TrainingManager/BLL.Interfaces/BLL.Interface.csproj
+++ b/TrainingManager/BLL.Interfaces/BLL.Interface.csproj
@@ -45,12 +45,12 @@
     <Compile Include="Entities\Module.cs" />
     <Compile Include="Entities\StudentModule.cs" />
     <Compile Include="Entities\User.cs" />
-    <Compile Include="Entities\Request.cs" />
     <Compile Include="Entities\Workshop.cs" />
+    <Compile Include="Interfaces\IGroupsService.cs" />
+    <Compile Include="Interfaces\IModuleService.cs" />
+    <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
