Add BLL.Interface.Interfaces services implementation into BLL.Services. Add some changes in mappers. Add si=ome changes in DAL and ORM entities. Add changes in AppDbContext

--- a/TrainingManager/DAL.Interfaces/DAL.Interface.csproj
+++ b/TrainingManager/DAL.Interfaces/DAL.Interface.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DTO\StudentModuleDto.cs" />
     <Compile Include="DTO\UserDto.cs" />
     <Compile Include="DTO\WorkshopDto.cs" />
+    <Compile Include="Interfaces\IGroupRepository.cs" />
     <Compile Include="Interfaces\IModuleRepository.cs" />
     <Compile Include="Interfaces\IStudentModuleRepository.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
