--- a/TrainingManager/BLL/BLL.csproj
+++ b/TrainingManager/BLL/BLL.csproj
@@ -41,7 +41,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mappes\EntitiesMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GroupService.cs" />
+    <Compile Include="Services\ModuleService.cs" />
+    <Compile Include="Services\StudentModuleService.cs" />
+    <Compile Include="Services\StudentService.cs" />
+    <Compile Include="Services\UserService.cs" />
+    <Compile Include="Services\WorkshopService.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL.Interfaces\BLL.Interface.csproj">
+      <Project>{8f18665e-db1b-436b-a60f-a515edf7ef6d}</Project>
+      <Name>BLL.Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DAL.Interfaces\DAL.Interface.csproj">
+      <Project>{c6327956-274a-49d7-88ca-37d4e692de02}</Project>
+      <Name>DAL.Interface</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
