--- a/TrainingManager/DAL/DAL.csproj
+++ b/TrainingManager/DAL/DAL.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Mappers\EntitiesMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\GroupRepository.cs" />
     <Compile Include="Repositories\ModuleRepository.cs" />
     <Compile Include="Repositories\StudentModuleRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
